@@ -1,3 +1,9 @@
+2002-11-18  Daniel Elstner  <daniel.elstner@gmx.net>
+
+	* src/main.cc (regexxer_register_stock_items): Always set the
+	intended icon size, but disable wildcarding for all but the last
+	pixbuf in an icon set.
+
 2002-11-17  Daniel Elstner  <daniel.elstner@gmx.net>
 
 	* pixmaps/stock_save_all_16.png: New menu icon.
